# pdfmerge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
pdfmerge/: main.py
