[tool.poetry]
name = "pdfmerge"
version = "0.1.0"
description = ""
authors = ["maguowei <imaguowei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
PyPDF2 = "^2.10.4"
click = "^8.1.3"

[tool.poetry.scripts]
pdfmerge = 'pdfmerge.main:pdf_merge'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
