[tool.poetry]
name = "pdfmerge-cli"
version = "0.2.0"
description = "pdf merge command line"
keywords = ["pdfmerge", "pdfmerge-cli"]
authors = ["maguowei <i.maguowei@gmail.com>"]
repository = "https://github.com/maguowei/pdfmerge"
homepage = "https://github.com/maguowei/pdfmerge"
readme = "README.md"
license = "MIT"

packages = [
    { include = "pdfmerge" },
]

[tool.poetry.dependencies]
python = "^3.7"
pypdf = "^3.2.1"
click = "^8.1.3"

[tool.poetry.scripts]
pdfmerge = 'pdfmerge.main:pdf_merge'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
